analyzer.output
Terminals unused in grammar

    _AND
    _FOR
    _IN
    _OR


Grammar

    0 $accept: file $end

    1 file: ε
    2     | statement_list
    3     | _NEW_LINE statement_list

    4 statement_list: statement
    5               | statement_list statement

    6 statement: simple_statement _NEW_LINE
    7          | compound_statement

    8 simple_statement: assign_statement
    9                 | return_statement
   10                 | function_call
   11                 | _BREAK
   12                 | _CONTINUE
   13                 | _PASS

   14 compound_statement: function_def
   15                   | if_statement
   16                   | while_statement
   17                   | try_except_statement

   18 assign_statement: _ID _ASSIGN num_exp

   19 return_statement: _RETURN
   20                 | _RETURN num_exp

   21 function_call: _ID _LPAREN arguments _RPAREN

   22 arguments: ε
   23          | arguments args

   24 args: num_exp
   25     | _COMMA num_exp

   26 $@1: ε

   27 $@2: ε

   28 function_def: _DEF _ID $@1 _LPAREN parameters _RPAREN _COLON _NEW_LINE $@2 body

   29 parameters: ε
   30           | _ID
   31           | param_with_default_val
   32           | parameters _COMMA _ID
   33           | parameters _COMMA param_with_default_val

   34 param_with_default_val: _ID _ASSIGN num_exp

   35 if_statement: if_part elif_part else_part

   36 $@3: ε

   37 @4: ε

   38 if_part: _IF $@3 num_exp _COLON _NEW_LINE @4 body

   39 elif_part: ε

   40 @5: ε

   41 elif_part: elif_part _ELIF num_exp _COLON _NEW_LINE @5 body

   42 while_statement: while_part else_part

   43 @6: ε

   44 while_part: _WHILE num_exp _COLON _NEW_LINE @6 body

   45 try_except_statement: try_part except_part finally_or_else_part

   46 @7: ε

   47 try_part: _TRY _COLON _NEW_LINE @7 body

   48 except_part: ε

   49 $@8: ε

   50 except_part: except_part _EXCEPT _ID $@8 except_finally_body
   51            | except_part _EXCEPT except_finally_body

   52 @9: ε

   53 except_finally_body: _COLON _NEW_LINE @9 body

   54 finally_or_else_part: ε
   55                     | _FINALLY except_finally_body
   56                     | _ELSE except_finally_body

   57 else_part: ε

   58 @10: ε

   59 else_part: _ELSE _COLON _NEW_LINE @10 body

   60 $@11: ε

   61 body: _INDENT $@11 statement_list _DEDENT

   62 num_exp: exp
   63        | _NOT num_exp
   64        | num_exp _ADD_SUB_OP num_exp
   65        | num_exp _MUL_DIV_OP num_exp
   66        | num_exp _LOP num_exp
   67        | num_exp _RELOP num_exp

   68 exp: literal
   69    | _ID
   70    | function_call
   71    | _LPAREN num_exp _RPAREN

   72 literal: _NUM_BOOL
   73        | _STRING
   74        | _NONE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _NEW_LINE (258) 3 6 28 38 41 44 47 53 59
    _INDENT (259) 61
    _DEDENT (260) 61
    _AND (261)
    _BREAK (262) 11
    _CONTINUE (263) 12
    _DEF (264) 28
    _ELIF (265) 41
    _ELSE (266) 56 59
    _EXCEPT (267) 50 51
    _FINALLY (268) 55
    _FOR (269)
    _IF (270) 38
    _IN (271)
    _NOT (272) 63
    _OR (273)
    _PASS (274) 13
    _RETURN (275) 19 20
    _TRY (276) 47
    _WHILE (277) 44
    _COMMA (278) 25 32 33
    _COLON (279) 28 38 41 44 47 53 59
    _LPAREN (280) 21 28 71
    _RPAREN (281) 21 28 71
    _ASSIGN (282) 18 34
    _ADD_SUB_OP <i> (283) 64
    _MUL_DIV_OP <i> (284) 65
    _LOP <i> (285) 66
    _RELOP <i> (286) 67
    _ID <s> (287) 18 21 28 30 32 34 50 69
    _NUM_BOOL <s> (288) 72
    _STRING <s> (289) 73
    _NONE <s> (290) 74
    VAR_ID (291)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    file (38)
        on left: 1 2 3
        on right: 0
    statement_list (39)
        on left: 4 5
        on right: 2 3 5 61
    statement (40)
        on left: 6 7
        on right: 4 5
    simple_statement (41)
        on left: 8 9 10 11 12 13
        on right: 6
    compound_statement (42)
        on left: 14 15 16 17
        on right: 7
    assign_statement (43)
        on left: 18
        on right: 8
    return_statement (44)
        on left: 19 20
        on right: 9
    function_call <i> (45)
        on left: 21
        on right: 10 70
    arguments (46)
        on left: 22 23
        on right: 21 23
    args (47)
        on left: 24 25
        on right: 23
    function_def (48)
        on left: 28
        on right: 14
    $@1 (49)
        on left: 26
        on right: 28
    $@2 (50)
        on left: 27
        on right: 28
    parameters (51)
        on left: 29 30 31 32 33
        on right: 28 32 33
    param_with_default_val (52)
        on left: 34
        on right: 31 33
    if_statement (53)
        on left: 35
        on right: 15
    if_part (54)
        on left: 38
        on right: 35
    $@3 (55)
        on left: 36
        on right: 38
    @4 (56)
        on left: 37
        on right: 38
    elif_part (57)
        on left: 39 41
        on right: 35 41
    @5 (58)
        on left: 40
        on right: 41
    while_statement (59)
        on left: 42
        on right: 16
    while_part (60)
        on left: 44
        on right: 42
    @6 (61)
        on left: 43
        on right: 44
    try_except_statement (62)
        on left: 45
        on right: 17
    try_part (63)
        on left: 47
        on right: 45
    @7 (64)
        on left: 46
        on right: 47
    except_part (65)
        on left: 48 50 51
        on right: 45 50 51
    $@8 (66)
        on left: 49
        on right: 50
    except_finally_body (67)
        on left: 53
        on right: 50 51 55 56
    @9 (68)
        on left: 52
        on right: 53
    finally_or_else_part (69)
        on left: 54 55 56
        on right: 45
    else_part (70)
        on left: 57 59
        on right: 35 42
    @10 (71)
        on left: 58
        on right: 59
    body (72)
        on left: 61
        on right: 28 38 41 44 47 53 59
    $@11 (73)
        on left: 60
        on right: 61
    num_exp <i> (74)
        on left: 62 63 64 65 66 67
        on right: 18 20 24 25 34 38 41 44 63 64 65 66 67 71
    exp <i> (75)
        on left: 68 69 70 71
        on right: 62
    literal <i> (76)
        on left: 72 73 74
        on right: 68


State 0

    0 $accept: • file $end

    _NEW_LINE  shift, and go to state 1
    _BREAK     shift, and go to state 2
    _CONTINUE  shift, and go to state 3
    _DEF       shift, and go to state 4
    _IF        shift, and go to state 5
    _PASS      shift, and go to state 6
    _RETURN    shift, and go to state 7
    _TRY       shift, and go to state 8
    _WHILE     shift, and go to state 9
    _ID        shift, and go to state 10

    $default  reduce using rule 1 (file)

    file                  go to state 11
    statement_list        go to state 12
    statement             go to state 13
    simple_statement      go to state 14
    compound_statement    go to state 15
    assign_statement      go to state 16
    return_statement      go to state 17
    function_call         go to state 18
    function_def          go to state 19
    if_statement          go to state 20
    if_part               go to state 21
    while_statement       go to state 22
    while_part            go to state 23
    try_except_statement  go to state 24
    try_part              go to state 25


State 1

    3 file: _NEW_LINE • statement_list

    _BREAK     shift, and go to state 2
    _CONTINUE  shift, and go to state 3
    _DEF       shift, and go to state 4
    _IF        shift, and go to state 5
    _PASS      shift, and go to state 6
    _RETURN    shift, and go to state 7
    _TRY       shift, and go to state 8
    _WHILE     shift, and go to state 9
    _ID        shift, and go to state 10

    statement_list        go to state 26
    statement             go to state 13
    simple_statement      go to state 14
    compound_statement    go to state 15
    assign_statement      go to state 16
    return_statement      go to state 17
    function_call         go to state 18
    function_def          go to state 19
    if_statement          go to state 20
    if_part               go to state 21
    while_statement       go to state 22
    while_part            go to state 23
    try_except_statement  go to state 24
    try_part              go to state 25


State 2

   11 simple_statement: _BREAK •

    $default  reduce using rule 11 (simple_statement)


State 3

   12 simple_statement: _CONTINUE •

    $default  reduce using rule 12 (simple_statement)


State 4

   28 function_def: _DEF • _ID $@1 _LPAREN parameters _RPAREN _COLON _NEW_LINE $@2 body

    _ID  shift, and go to state 27


State 5

   38 if_part: _IF • $@3 num_exp _COLON _NEW_LINE @4 body

    $default  reduce using rule 36 ($@3)

    $@3  go to state 28


State 6

   13 simple_statement: _PASS •

    $default  reduce using rule 13 (simple_statement)


State 7

   19 return_statement: _RETURN •
   20                 | _RETURN • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    $default  reduce using rule 19 (return_statement)

    function_call  go to state 35
    num_exp        go to state 36
    exp            go to state 37
    literal        go to state 38


State 8

   47 try_part: _TRY • _COLON _NEW_LINE @7 body

    _COLON  shift, and go to state 39


State 9

   44 while_part: _WHILE • num_exp _COLON _NEW_LINE @6 body

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 40
    exp            go to state 37
    literal        go to state 38


State 10

   18 assign_statement: _ID • _ASSIGN num_exp
   21 function_call: _ID • _LPAREN arguments _RPAREN

    _LPAREN  shift, and go to state 41
    _ASSIGN  shift, and go to state 42


State 11

    0 $accept: file • $end

    $end  shift, and go to state 43


State 12

    2 file: statement_list •
    5 statement_list: statement_list • statement

    _BREAK     shift, and go to state 2
    _CONTINUE  shift, and go to state 3
    _DEF       shift, and go to state 4
    _IF        shift, and go to state 5
    _PASS      shift, and go to state 6
    _RETURN    shift, and go to state 7
    _TRY       shift, and go to state 8
    _WHILE     shift, and go to state 9
    _ID        shift, and go to state 10

    $default  reduce using rule 2 (file)

    statement             go to state 44
    simple_statement      go to state 14
    compound_statement    go to state 15
    assign_statement      go to state 16
    return_statement      go to state 17
    function_call         go to state 18
    function_def          go to state 19
    if_statement          go to state 20
    if_part               go to state 21
    while_statement       go to state 22
    while_part            go to state 23
    try_except_statement  go to state 24
    try_part              go to state 25


State 13

    4 statement_list: statement •

    $default  reduce using rule 4 (statement_list)


State 14

    6 statement: simple_statement • _NEW_LINE

    _NEW_LINE  shift, and go to state 45


State 15

    7 statement: compound_statement •

    $default  reduce using rule 7 (statement)


State 16

    8 simple_statement: assign_statement •

    $default  reduce using rule 8 (simple_statement)


State 17

    9 simple_statement: return_statement •

    $default  reduce using rule 9 (simple_statement)


State 18

   10 simple_statement: function_call •

    $default  reduce using rule 10 (simple_statement)


State 19

   14 compound_statement: function_def •

    $default  reduce using rule 14 (compound_statement)


State 20

   15 compound_statement: if_statement •

    $default  reduce using rule 15 (compound_statement)


State 21

   35 if_statement: if_part • elif_part else_part

    $default  reduce using rule 39 (elif_part)

    elif_part  go to state 46


State 22

   16 compound_statement: while_statement •

    $default  reduce using rule 16 (compound_statement)


State 23

   42 while_statement: while_part • else_part

    _ELSE  shift, and go to state 47

    $default  reduce using rule 57 (else_part)

    else_part  go to state 48


State 24

   17 compound_statement: try_except_statement •

    $default  reduce using rule 17 (compound_statement)


State 25

   45 try_except_statement: try_part • except_part finally_or_else_part

    $default  reduce using rule 48 (except_part)

    except_part  go to state 49


State 26

    3 file: _NEW_LINE statement_list •
    5 statement_list: statement_list • statement

    _BREAK     shift, and go to state 2
    _CONTINUE  shift, and go to state 3
    _DEF       shift, and go to state 4
    _IF        shift, and go to state 5
    _PASS      shift, and go to state 6
    _RETURN    shift, and go to state 7
    _TRY       shift, and go to state 8
    _WHILE     shift, and go to state 9
    _ID        shift, and go to state 10

    $default  reduce using rule 3 (file)

    statement             go to state 44
    simple_statement      go to state 14
    compound_statement    go to state 15
    assign_statement      go to state 16
    return_statement      go to state 17
    function_call         go to state 18
    function_def          go to state 19
    if_statement          go to state 20
    if_part               go to state 21
    while_statement       go to state 22
    while_part            go to state 23
    try_except_statement  go to state 24
    try_part              go to state 25


State 27

   28 function_def: _DEF _ID • $@1 _LPAREN parameters _RPAREN _COLON _NEW_LINE $@2 body

    $default  reduce using rule 26 ($@1)

    $@1  go to state 50


State 28

   38 if_part: _IF $@3 • num_exp _COLON _NEW_LINE @4 body

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 51
    exp            go to state 37
    literal        go to state 38


State 29

   63 num_exp: _NOT • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 52
    exp            go to state 37
    literal        go to state 38


State 30

   71 exp: _LPAREN • num_exp _RPAREN

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 53
    exp            go to state 37
    literal        go to state 38


State 31

   21 function_call: _ID • _LPAREN arguments _RPAREN
   69 exp: _ID •

    _LPAREN  shift, and go to state 41

    $default  reduce using rule 69 (exp)


State 32

   72 literal: _NUM_BOOL •

    $default  reduce using rule 72 (literal)


State 33

   73 literal: _STRING •

    $default  reduce using rule 73 (literal)


State 34

   74 literal: _NONE •

    $default  reduce using rule 74 (literal)


State 35

   70 exp: function_call •

    $default  reduce using rule 70 (exp)


State 36

   20 return_statement: _RETURN num_exp •
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57

    $default  reduce using rule 20 (return_statement)


State 37

   62 num_exp: exp •

    $default  reduce using rule 62 (num_exp)


State 38

   68 exp: literal •

    $default  reduce using rule 68 (exp)


State 39

   47 try_part: _TRY _COLON • _NEW_LINE @7 body

    _NEW_LINE  shift, and go to state 58


State 40

   44 while_part: _WHILE num_exp • _COLON _NEW_LINE @6 body
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _COLON       shift, and go to state 59
    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57


State 41

   21 function_call: _ID _LPAREN • arguments _RPAREN

    $default  reduce using rule 22 (arguments)

    arguments  go to state 60


State 42

   18 assign_statement: _ID _ASSIGN • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 61
    exp            go to state 37
    literal        go to state 38


State 43

    0 $accept: file $end •

    $default  accept


State 44

    5 statement_list: statement_list statement •

    $default  reduce using rule 5 (statement_list)


State 45

    6 statement: simple_statement _NEW_LINE •

    $default  reduce using rule 6 (statement)


State 46

   35 if_statement: if_part elif_part • else_part
   41 elif_part: elif_part • _ELIF num_exp _COLON _NEW_LINE @5 body

    _ELIF  shift, and go to state 62
    _ELSE  shift, and go to state 47

    $default  reduce using rule 57 (else_part)

    else_part  go to state 63


State 47

   59 else_part: _ELSE • _COLON _NEW_LINE @10 body

    _COLON  shift, and go to state 64


State 48

   42 while_statement: while_part else_part •

    $default  reduce using rule 42 (while_statement)


State 49

   45 try_except_statement: try_part except_part • finally_or_else_part
   50 except_part: except_part • _EXCEPT _ID $@8 except_finally_body
   51            | except_part • _EXCEPT except_finally_body

    _ELSE     shift, and go to state 65
    _EXCEPT   shift, and go to state 66
    _FINALLY  shift, and go to state 67

    $default  reduce using rule 54 (finally_or_else_part)

    finally_or_else_part  go to state 68


State 50

   28 function_def: _DEF _ID $@1 • _LPAREN parameters _RPAREN _COLON _NEW_LINE $@2 body

    _LPAREN  shift, and go to state 69


State 51

   38 if_part: _IF $@3 num_exp • _COLON _NEW_LINE @4 body
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _COLON       shift, and go to state 70
    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57


State 52

   63 num_exp: _NOT num_exp •
   64        | num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _RELOP       shift, and go to state 57

    $default  reduce using rule 63 (num_exp)


State 53

   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp
   71 exp: _LPAREN num_exp • _RPAREN

    _RPAREN      shift, and go to state 71
    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57


State 54

   64 num_exp: num_exp _ADD_SUB_OP • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 72
    exp            go to state 37
    literal        go to state 38


State 55

   65 num_exp: num_exp _MUL_DIV_OP • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 73
    exp            go to state 37
    literal        go to state 38


State 56

   66 num_exp: num_exp _LOP • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 74
    exp            go to state 37
    literal        go to state 38


State 57

   67 num_exp: num_exp _RELOP • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 75
    exp            go to state 37
    literal        go to state 38


State 58

   47 try_part: _TRY _COLON _NEW_LINE • @7 body

    $default  reduce using rule 46 (@7)

    @7  go to state 76


State 59

   44 while_part: _WHILE num_exp _COLON • _NEW_LINE @6 body

    _NEW_LINE  shift, and go to state 77


State 60

   21 function_call: _ID _LPAREN arguments • _RPAREN
   23 arguments: arguments • args

    _NOT       shift, and go to state 29
    _COMMA     shift, and go to state 78
    _LPAREN    shift, and go to state 30
    _RPAREN    shift, and go to state 79
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    args           go to state 80
    num_exp        go to state 81
    exp            go to state 37
    literal        go to state 38


State 61

   18 assign_statement: _ID _ASSIGN num_exp •
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57

    $default  reduce using rule 18 (assign_statement)


State 62

   41 elif_part: elif_part _ELIF • num_exp _COLON _NEW_LINE @5 body

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 82
    exp            go to state 37
    literal        go to state 38


State 63

   35 if_statement: if_part elif_part else_part •

    $default  reduce using rule 35 (if_statement)


State 64

   59 else_part: _ELSE _COLON • _NEW_LINE @10 body

    _NEW_LINE  shift, and go to state 83


State 65

   56 finally_or_else_part: _ELSE • except_finally_body

    _COLON  shift, and go to state 84

    except_finally_body  go to state 85


State 66

   50 except_part: except_part _EXCEPT • _ID $@8 except_finally_body
   51            | except_part _EXCEPT • except_finally_body

    _COLON  shift, and go to state 84
    _ID     shift, and go to state 86

    except_finally_body  go to state 87


State 67

   55 finally_or_else_part: _FINALLY • except_finally_body

    _COLON  shift, and go to state 84

    except_finally_body  go to state 88


State 68

   45 try_except_statement: try_part except_part finally_or_else_part •

    $default  reduce using rule 45 (try_except_statement)


State 69

   28 function_def: _DEF _ID $@1 _LPAREN • parameters _RPAREN _COLON _NEW_LINE $@2 body

    _ID  shift, and go to state 89

    $default  reduce using rule 29 (parameters)

    parameters              go to state 90
    param_with_default_val  go to state 91


State 70

   38 if_part: _IF $@3 num_exp _COLON • _NEW_LINE @4 body

    _NEW_LINE  shift, and go to state 92


State 71

   71 exp: _LPAREN num_exp _RPAREN •

    $default  reduce using rule 71 (exp)


State 72

   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   64        | num_exp _ADD_SUB_OP num_exp •
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _MUL_DIV_OP  shift, and go to state 55

    $default  reduce using rule 64 (num_exp)


State 73

   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   65        | num_exp _MUL_DIV_OP num_exp •
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    $default  reduce using rule 65 (num_exp)


State 74

   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   66        | num_exp _LOP num_exp •
   67        | num_exp • _RELOP num_exp

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _RELOP       shift, and go to state 57

    $default  reduce using rule 66 (num_exp)


State 75

   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp
   67        | num_exp _RELOP num_exp •

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55

    $default  reduce using rule 67 (num_exp)


State 76

   47 try_part: _TRY _COLON _NEW_LINE @7 • body

    _INDENT  shift, and go to state 93

    body  go to state 94


State 77

   44 while_part: _WHILE num_exp _COLON _NEW_LINE • @6 body

    $default  reduce using rule 43 (@6)

    @6  go to state 95


State 78

   25 args: _COMMA • num_exp

    _NOT       shift, and go to state 29
    _LPAREN    shift, and go to state 30
    _ID        shift, and go to state 31
    _NUM_BOOL  shift, and go to state 32
    _STRING    shift, and go to state 33
    _NONE      shift, and go to state 34

    function_call  go to state 35
    num_exp        go to state 96
    exp            go to state 37
    literal        go to state 38


State 79

   21 function_call: _ID _LPAREN arguments _RPAREN •

    $default  reduce using rule 21 (function_call)


State 80

   23 arguments: arguments args •

    $default  reduce using rule 23 (arguments)


State 81

   24 args: num_exp •
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57

    $default  reduce using rule 24 (args)


State 82

   41 elif_part: elif_part _ELIF num_exp • _COLON _NEW_LINE @5 body
   64 num_exp: num_exp • _ADD_SUB_OP num_exp
   65        | num_exp • _MUL_DIV_OP num_exp
   66        | num_exp • _LOP num_exp
   67        | num_exp • _RELOP num_exp

    _COLON       shift, and go to state 97
    _ADD_SUB_OP  shift, and go to state 54
    _MUL_DIV_OP  shift, and go to state 55
    _LOP         shift, and go to state 56
    _RELOP       shift, and go to state 57


State 83

   59 else_part: _ELSE _COLON _NEW_LINE • @10 body

    $default  reduce using rule 58 (@10)

    @10  go to state 98


State 84
